# CupEngine

./: CMakeLists.txt  README.md  main.cpp
eventManager/: EventManager.h
eventManager/impl/: SdlEventManagerTest.h
src/: main.cpp
src/eventManager/: EventManager.h
src/eventManager/impl/: SdlEventManager.h  SdlEventManagerTest.h
src/render/: BasicRender.h
src/render/impl/: OpenGLSDLRender.cpp  OpenGLSDLRender.h
src/windowService/: window.h  windowFabric.cpp  windowFabric.h
src/windowService/impl/: SDL_WindowImpl.cpp  SDL_WindowImpl.h  SdlWindowConfig.h
